--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@ Annie is the archetype of the casual driver. She doesn’t know the streets enou
         <div class="container">
             <div class="row">
                 <div class="col offset-lg-8 mx-auto text-center">
-                    <h2 class="text-white section-heading" style="width: 100%;max-height: 100%;">Annie's Quadrant</h2><img class="d-inline-flex align-items-center align-self-center" src="assets/img/thumbnails/Screen%20Shot%202020-10-06%20at%209.18.01%20AM.png" style="width: 60%;height: auto;margin: 5%;max-height: 100%;">
+                    <h2 class="text-white section-heading" style="width: 100%;max-height: 100%;">Annie's Quadrant</h2><img class="d-inline-flex align-items-center align-self-center" src="assets/img/thumbnails/anniq.png" style="width: 60%;height: auto;margin: 5%;max-height: 100%;">
                     <hr class="light my-4"><a class="btn btn-light btn-xl js-scroll-trigger" role="button" data-bs-hover-animate="pulse" href="#sketch-3" style="background: rgb(188,207,227);">let's see what driving with annie is like</a></div>
             </div>
         </div>
